--- a/app/globals.css
+++ b/app/globals.css
@@ -3,24 +3,52 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --mint: rgb(221, 244, 231);
+  --green: rgb(103, 192, 144);
+  --teal: rgb(38, 102, 127);
+  --navy: rgb(18, 65, 112);
 }
 
-@theme inline {
+/* @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
-}
+} */
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+} */
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  background: var(--navy);
+  color: var(--mint);
+  /* font-family: Arial, Helvetica, sans-serif; */
+  font-family: Lato;
+}
+
+input {
+  background: var(--mint);
+  color: var(--teal);
+  border: none;
+  border-bottom: solid 1px var(--navy);
+  border-radius: 8px;
+  padding: 5px;
+}
+
+button {
+  background: var(--mint);
+  color: var(--teal);
+  padding: 5px;
+  border-radius: 8px;
+  width: 10rem;
+  cursor: pointer;
+  transition: 0.3s ease-in-out;
+}
+
+button:hover {
+  background: var(--green);
 }
