Cambio en el background de globals.css y de los componentes CardCartelera.js y CardProximamente.js

--- a/app/globals.css
+++ b/app/globals.css
@@ -25,7 +25,8 @@
 } */
 
 body {
-  background: var(--navy);
+  background: url('/1760553720431.png');
+  background-size: cover;
   color: var(--mint);
 }
 
