--- a/app/globals.css
+++ b/app/globals.css
@@ -10,24 +10,20 @@
   --navy: rgb(18, 65, 112);
 }
 
-/* @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-} */
-
-/* @media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-} */
-
 body {
   background: url('/1760553720431.png');
   background-size: cover;
   color: var(--mint);
+  margin-top: 10em;
+}
+
+header {
+  background: linear-gradient(to bottom, var(--navy) 50%, transparent 100%);
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  width: 100%;
 }
 
 input {
